--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,11 +23,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mBoundsError: attempt to access 0-element Array{UInt8,1} at index [1]\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mBoundsError: attempt to access 0-element Array{UInt8,1} at index [1]\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1mreadnrows!\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::DataFrames.ParsedCSV, ::IOStream, ::Int64, ::DataFrames.ParseOptions{String,String}, ::DataFrames.ParseType{false,true,false,false}, ::UInt8\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m/Users/artinamaloki1/.julia/v0.6/DataFrames/src/dataframe/io.jl:170\u001b[22m\u001b[22m",
+      " [2] \u001b[1mreadtable!\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::DataFrames.ParsedCSV, ::IOStream, ::Int64, ::DataFrames.ParseOptions{String,String}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m/Users/artinamaloki1/.julia/v0.6/DataFrames/src/dataframe/io.jl:760\u001b[22m\u001b[22m",
+      " [3] \u001b[1m#readtable#84\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Bool, ::Char, ::Array{Char,1}, ::Char, ::Array{String,1}, ::Array{String,1}, ::Array{String,1}, ::Bool, ::Int64, ::Array{Symbol,1}, ::Array{Any,1}, ::Bool, ::Char, ::Bool, ::Int64, ::Array{Int64,1}, ::Bool, ::Symbol, ::Bool, ::Bool, ::DataFrames.#readtable, ::IOStream, ::Int64\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m/Users/artinamaloki1/.julia/v0.6/DataFrames/src/dataframe/io.jl:851\u001b[22m\u001b[22m",
+      " [4] \u001b[1m(::DataFrames.#kw##readtable)\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Array{Any,1}, ::DataFrames.#readtable, ::IOStream, ::Int64\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./<missing>:0\u001b[22m\u001b[22m",
+      " [5] \u001b[1m#readtable#85\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Bool, ::Char, ::Array{Char,1}, ::Char, ::Array{String,1}, ::Array{String,1}, ::Array{String,1}, ::Bool, ::Int64, ::Array{Symbol,1}, ::Array{Any,1}, ::Bool, ::Char, ::Bool, ::Int64, ::Array{Int64,1}, ::Bool, ::Symbol, ::Bool, ::Bool, ::DataFrames.#readtable, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m/Users/artinamaloki1/.julia/v0.6/DataFrames/src/dataframe/io.jl:945\u001b[22m\u001b[22m",
+      " [6] \u001b[1mreadtable\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m/Users/artinamaloki1/.julia/v0.6/DataFrames/src/dataframe/io.jl:930\u001b[22m\u001b[22m",
+      " [7] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
+     ]
+    }
+   ],
    "source": [
     "# Import data\n",
     "tData = readtable(\"GlobalLandTemperaturesByCountry.csv\");"
@@ -42,25 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[33mWARNING: \u001b[39m\u001b[22m\u001b[33misna(x::AbstractArray) is deprecated, use isna.(x) instead.\u001b[39m\n",
-      "Stacktrace:\n",
-      " [1] \u001b[1mdepwarn\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./deprecated.jl:70\u001b[22m\u001b[22m\n",
-      " [2] \u001b[1misna\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::DataArrays.DataArray{Float64,1}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./deprecated.jl:57\u001b[22m\u001b[22m\n",
-      " [3] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m\n",
-      " [4] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Module, ::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m/Users/artinamaloki1/.julia/v0.6/Compat/src/Compat.jl:464\u001b[22m\u001b[22m\n",
-      " [5] \u001b[1mexecute_request\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::ZMQ.Socket, ::IJulia.Msg\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m/Users/artinamaloki1/.julia/v0.6/IJulia/src/execute_request.jl:154\u001b[22m\u001b[22m\n",
-      " [6] \u001b[1meventloop\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::ZMQ.Socket\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m/Users/artinamaloki1/.julia/v0.6/IJulia/src/eventloop.jl:8\u001b[22m\u001b[22m\n",
-      " [7] \u001b[1m(::IJulia.##14#17)\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./task.jl:335\u001b[22m\u001b[22m\n",
-      "while loading In[30], in expression starting on line 1\n"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: tData not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: tData not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
      ]
     }
    ],
